[package]
name = "CVE-2024-44083"
version = "0.1.0"
edition = "2021"

[dependencies]
exe = "0.5.6"
anything = { git="https://github.com/Azvanzed/anything-rs.git" }
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.15" }
clap_derive = "4.5.13"

[profile.release]
debug = false
codegen-units = 1
opt-level = 3
strip = true
lto = true